--- a/Sources/Plancrow/package.json
+++ b/Sources/Plancrow/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "application-name",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "start": "node app.js"
-  },
-  "dependencies": {
-    "express": "3.2.2",
-    "jade": "*",
-    "less-middleware": "*"
-    ,"mysql" : "2.0.0-alpha7"
-  }
+    "name": "application-name",
+    "version": "0.0.1",
+    "private": true,
+    "scripts": {
+        "start": "node server.js"
+    },
+    "dependencies": {
+        "express": "3.2.2",
+        "jade": "*",
+        "less-middleware": "*",
+        "mysql": "2.0.0-alpha7",
+        "coffee-script": "1.6.3",
+        "connect-coffee-script": "0.1.6",
+        "orm": "2.0.15",
+        "passport-local": "0.1.6"
+    }
 }
