--- a/Sources/Plancrow/package.json
+++ b/Sources/Plancrow/package.json
@@ -13,6 +13,7 @@
         "coffee-script": "1.6.3",
         "connect-coffee-script": "0.1.6",
         "orm": "2.0.15",
-        "passport-local": "0.1.6"
+        "passport-local": "0.1.6",
+        "underscore": "1.5.1"
     }
 }
