Working on the 22 Time posting page

--- a/Sources/Plancrow/bower.json
+++ b/Sources/Plancrow/bower.json
@@ -9,6 +9,7 @@
         "underscore-amd": "latest",
         "backbone-amd": "latest",
         "bootstrap": "latest",
+        "bootstrap-amd": "latest",
         "select2": "latest",
         "select2-bootstrap-css": "latest",
         "font-awesome": "latest"
