--- a/Sources/Plancrow/package.json
+++ b/Sources/Plancrow/package.json
@@ -14,6 +14,7 @@
         "connect-coffee-script": "0.1.6",
         "orm": "2.0.15",
         "passport-local": "0.1.6",
-        "underscore": "1.5.1"
+        "underscore": "1.5.1",
+        "async": "0.2.9"
     }
 }
