--- a/Sources/Plancrow/package.json
+++ b/Sources/Plancrow/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "application-name",
+    "name": "plancrow",
     "version": "0.0.1",
     "private": true,
     "scripts": {
@@ -16,7 +16,6 @@
         "passport-local": "0.1.6",
         "underscore": "1.5.1",
         "async": "0.2.9",
-        "locale": "0.0.10",
-        "money": "0.1.3"
+        "locale": "0.0.10"
     }
 }
