--- a/Sources/Plancrow/package.json
+++ b/Sources/Plancrow/package.json
@@ -17,6 +17,7 @@
     "underscore": "1.5.1",
     "async": "0.2.9",
     "locale": "0.0.10",
-    "requirejs": "~2.1.8"
+    "requirejs": "~2.1.8",
+    "gzippo": "0.2.0"
   }
 }
